--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,16 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 django = "^4.1.4"
+pre-commit = "^2.20.0"
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.black]
+preview = true
+
+[tool.isort]
+profile = "black"
