--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 django = "^4.1.4"
 pre-commit = "^2.20.0"
 psycopg2 = "^2.9.5"
+djangorestframework = "^3.14.0"
 
 
 [build-system]
