--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = "^4.1.4"
 pre-commit = "^2.20.0"
 psycopg2 = "^2.9.5"
 djangorestframework = "^3.14.0"
+factory-boy = "^3.2.1"
 
 
 [build-system]
