--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pre-commit = "^2.20.0"
 psycopg2 = "^2.9.5"
 djangorestframework = "^3.14.0"
 factory-boy = "^3.2.1"
+ipdb = "^0.13.11"
 
 
 [build-system]
