#56 Invite user use case

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ djangorestframework = "^3.14.0"
 factory-boy = "^3.2.1"
 ipdb = "^0.13.11"
 coverage = "^7.0.5"
+django-filter = "^22.1"
 
 
 [build-system]
