--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pycountry = "^22.3.5"
 celery = "^5.3.4"
 redis = "^5.0.1"
 drf-spectacular = "^0.26.5"
+mongoengine = "^0.27.0"
 
 
 [build-system]
